fixed background on ios

--- a/src/global.scss
+++ b/src/global.scss
@@ -47,7 +47,15 @@ ion-toolbar.md{
     color:white;
   }
 
+  ion-title.ios{
+    color:white;
+  }
+
   ion-content.md{
+    --background:#202124;
+  }
+
+  ion-content.ios{
     --background:#202124;
   }
 
@@ -55,7 +63,6 @@ ion-toolbar.md{
 //     background:#428cff
 //   }
 
-//theres a part that part thing nu im gonna work on it tomorrow
 ion-menu-button{
     --color:#428cff
 }
